[package]
name = "suggestions"
version = "0.1.0"
edition = "2021"

[features]
default = ["rust-tls"]
native-tls = ["serenity/native_tls_backend"]
rust-tls = ["serenity/rustls_backend"]

[dependencies]
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }
sqlx = { version = "*", default-features = false, features = ["any", "macros"] }
serenity = { version = "*", default-features = false, features = ["model"] }
async-trait = { version = "*", default-features = false }
futures = { version = "*", default-features = false }
